# pgstac-ingestor

./: .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mkdocs.yml
pgstac_ingestor/: collection.py  config.py  dependencies.py  ingestor.py  loader.py  logger.py  main.py  schemas.py  services.py  utils.py  validators.py
tests/: conftest.py  test_collection.py  test_collection_endpoint.py  test_ingestor.py  test_registration.py  test_utils.py
